Ingress/4-ingress-connection-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connectora
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrought : "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect : "false"
    nginx.ingress.kubernetes.io/backend-protocol: https
    kubernetes.io/ingress.class: nginx

spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: connectora.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: connectora
            port:
              number: 8080
  - host: connectorb.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: connectorb
            port:
              number: 8081
